force-app/main/default/objects/Campaign/fields/Members__c.field-meta.xml
<CustomField>
    <fullName>Members__c</fullName>
    <description>The number of members in the campaign.</description>
    <inlineHelpText>The number of members in the campaign.</inlineHelpText>
    <label># Members</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>