force-app/main/default/objects/Campaign/fields/Num_Answered__c.field-meta.xml
<CustomField>
    <fullName>Num_Answered__c</fullName>
    <description>The number of members that answered the phone.</description>
    <inlineHelpText>The number of members that answered the phone.</inlineHelpText>
    <label># Answered</label>
    <summaryFilterItems>
        <field>CampaignMember.Answered__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>