force-app/main/default/objects/Campaign/fields/Num_Hang_ups__c.field-meta.xml
<CustomField>
    <fullName>Num_Hang_ups__c</fullName>
    <description>The number of members that hung up the phone.</description>
    <inlineHelpText>The number of members that hung up the phone.</inlineHelpText>
    <label># Hang-ups</label>
    <summaryFilterItems>
        <field>CampaignMember.Hang_up__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>