force-app/main/default/objects/Campaign/fields/Num_Paid__c.field-meta.xml
<CustomField>
    <fullName>Num_Paid__c</fullName>
    <description>The number of members that paid for the conference.</description>
    <inlineHelpText>The number of members that paid for the conference.</inlineHelpText>
    <label># Paid</label>
    <summaryFilterItems>
        <field>CampaignMember.Paid__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>