force-app/main/default/objects/Campaign/fields/Num_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Num_Unpaid__c</fullName>
    <description>The number of members that have not yet paid.</description>
    <inlineHelpText>The number of members that have not yet paid.</inlineHelpText>
    <label># Unpaid</label>
    <summaryFilterItems>
        <field>CampaignMember.Paid__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>