force-app/main/default/objects/Campaign/recordTypes/Campaign_Initiative.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Initiative</fullName>
    <active>true</active>
    <description>Record type for a campaign initiative</description>
    <label>Campaign Initiative</label>
</RecordType>