force-app/main/default/objects/Campaign/recordTypes/Conference_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Conference_Campaign</fullName>
    <active>true</active>
    <description>Record type for a conference campaign</description>
    <label>Conference Campaign</label>
</RecordType>