force-app/main/default/objects/Campaign/recordTypes/Email_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Email_Campaign</fullName>
    <active>true</active>
    <description>Record type for an email campaign</description>
    <label>Email Campaign</label>
</RecordType>