force-app/main/default/objects/Campaign/recordTypes/Telemarketing_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Telemarketing_Campaign</fullName>
    <active>true</active>
    <description>Record type for a telemarketing campaign</description>
    <label>Telemarketing Campaign</label>
</RecordType>